k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 3
  selector:
    matchLabels:
      run: helloworld
  template:
    metadata:
      labels:
        run: helloworld
    spec:
      containers:
        - name: helloworld
          image: docker-registry.linecorp.com/line-taiwan/gln/docker_workshop/hello_lw#####
          ports:
            - containerPort: 8080
