k8s/deployment_with_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      run: helloworld
  template:
    metadata:
      labels:
        run: helloworld
    spec:
      containers:
        - name: helloworld
          image: docker-registry.linecorp.com/line-taiwan/gln/docker_workshop/hello_lw#####
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /hello
              port: 8080
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /hello
              port: 8080
