k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
    - port: 8080
  selector:
    run: helloworld
